; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_cinepak.c_cinepak_decode_codebook.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_cinepak.c_cinepak_decode_codebook.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32**, i32, i32, i32*)* @cinepak_decode_codebook to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cinepak_decode_codebook(i32** %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32**, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  store i32** %0, i32*** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %23 = load i32*, i32** %8, align 8
  %24 = load i32, i32* %7, align 4
  %25 = sext i32 %24 to i64
  %26 = getelementptr inbounds i32, i32* %23, i64 %25
  store i32* %26, i32** %9, align 8
  %27 = load i32, i32* %6, align 4
  %28 = and i32 %27, 4
  %29 = icmp ne i32 %28, 0
  %30 = zext i1 %29 to i64
  %31 = select i1 %29, i32 4, i32 6
  store i32 %31, i32* %13, align 4
  store i32 0, i32* %10, align 4
  store i32 0, i32* %11, align 4
  %32 = load i32**, i32*** %5, align 8
  %33 = getelementptr inbounds i32*, i32** %32, i64 0
  %34 = load i32*, i32** %33, align 8
  store i32* %34, i32** %14, align 8
  store i32 0, i32* %12, align 4
  br label %35

35:                                               ; preds = %157, %4
  %36 = load i32, i32* %12, align 4
  %37 = icmp slt i32 %36, 256
  br i1 %37, label %38, label %160

38:                                               ; preds = %35
  %39 = load i32, i32* %6, align 4
  %40 = and i32 %39, 1
  %41 = icmp ne i32 %40, 0
  br i1 %41, label %42, label %57

42:                                               ; preds = %38
  %43 = load i32, i32* %11, align 4
  %44 = ashr i32 %43, 1
  store i32 %44, i32* %11, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %57, label %46

46:                                               ; preds = %42
  %47 = load i32*, i32** %8, align 8
  %48 = getelementptr inbounds i32, i32* %47, i64 4
  %49 = load i32*, i32** %9, align 8
  %50 = icmp ugt i32* %48, %49
  br i1 %50, label %51, label %52

51:                                               ; preds = %46
  br label %160

52:                                               ; preds = %46
  %53 = load i32*, i32** %8, align 8
  %54 = call i32 @AV_RB32(i32* %53)
  store i32 %54, i32* %10, align 4
  %55 = load i32*, i32** %8, align 8
  %56 = getelementptr inbounds i32, i32* %55, i64 4
  store i32* %56, i32** %8, align 8
  store i32 -2147483648, i32* %11, align 4
  br label %57

57:                                               ; preds = %52, %42, %38
  %58 = load i32, i32* %6, align 4
  %59 = and i32 %58, 1
  %60 = icmp ne i32 %59, 0
  br i1 %60, label %61, label %66

61:                                               ; preds = %57
  %62 = load i32, i32* %10, align 4
  %63 = load i32, i32* %11, align 4
  %64 = and i32 %62, %63
  %65 = icmp ne i32 %64, 0
  br i1 %65, label %66, label %153

66:                                               ; preds = %61, %57
  %67 = load i32*, i32** %8, align 8
  %68 = load i32, i32* %13, align 4
  %69 = sext i32 %68 to i64
  %70 = getelementptr inbounds i32, i32* %67, i64 %69
  %71 = load i32*, i32** %9, align 8
  %72 = icmp ugt i32* %70, %71
  br i1 %72, label %73, label %74

73:                                               ; preds = %66
  br label %160

74:                                               ; preds = %66
  store i32 0, i32* %15, align 4
  br label %75

75:                                               ; preds = %93, %74
  %76 = load i32, i32* %15, align 4
  %77 = icmp slt i32 %76, 4
  br i1 %77, label %78, label %96

78:                                               ; preds = %75
  %79 = load i32*, i32** %8, align 8
  %80 = getelementptr inbounds i32, i32* %79, i32 1
  store i32* %80, i32** %8, align 8
  %81 = load i32, i32* %79, align 4
  store i32 %81, i32* %17, align 4
  store i32 0, i32* %16, align 4
  br label %82

82:                                               ; preds = %89, %78
  %83 = load i32, i32* %16, align 4
  %84 = icmp slt i32 %83, 3
  br i1 %84, label %85, label %92

85:                                               ; preds = %82
  %86 = load i32, i32* %17, align 4
  %87 = load i32*, i32** %14, align 8
  %88 = getelementptr inbounds i32, i32* %87, i32 1
  store i32* %88, i32** %14, align 8
  store i32 %86, i32* %87, align 4
  br label %89

89:                                               ; preds = %85
  %90 = load i32, i32* %16, align 4
  %91 = add nsw i32 %90, 1
  store i32 %91, i32* %16, align 4
  br label %82

92:                                               ; preds = %82
  br label %93

93:                                               ; preds = %92
  %94 = load i32, i32* %15, align 4
  %95 = add nsw i32 %94, 1
  store i32 %95, i32* %15, align 4
  br label %75

96:                                               ; preds = %75
  %97 = load i32, i32* %13, align 4
  %98 = icmp eq i32 %97, 6
  br i1 %98, label %99, label %152

99:                                               ; preds = %96
  %100 = load i32*, i32** %8, align 8
  %101 = getelementptr inbounds i32, i32* %100, i32 1
  store i32* %101, i32** %8, align 8
  %102 = load i32, i32* %100, align 4
  store i32 %102, i32* %21, align 4
  %103 = load i32*, i32** %8, align 8
  %104 = getelementptr inbounds i32, i32* %103, i32 1
  store i32* %104, i32** %8, align 8
  %105 = load i32, i32* %103, align 4
  store i32 %105, i32* %22, align 4
  %106 = load i32*, i32** %14, align 8
  %107 = getelementptr inbounds i32, i32* %106, i64 -12
  store i32* %107, i32** %14, align 8
  store i32 0, i32* %15, align 4
  br label %108

108:                                              ; preds = %148, %99
  %109 = load i32, i32* %15, align 4
  %110 = icmp slt i32 %109, 4
  br i1 %110, label %111, label %151

111:                                              ; preds = %108
  %112 = load i32*, i32** %14, align 8
  %113 = getelementptr inbounds i32, i32* %112, i32 1
  store i32* %113, i32** %14, align 8
  %114 = load i32, i32* %112, align 4
  %115 = load i32, i32* %22, align 4
  %116 = mul nsw i32 %115, 2
  %117 = add nsw i32 %114, %116
  store i32 %117, i32* %18, align 4
  %118 = load i32*, i32** %14, align 8
  %119 = getelementptr inbounds i32, i32* %118, i32 1
  store i32* %119, i32** %14, align 8
  %120 = load i32, i32* %118, align 4
  %121 = load i32, i32* %21, align 4
  %122 = sdiv i32 %121, 2
  %123 = sub nsw i32 %120, %122
  %124 = load i32, i32* %22, align 4
  %125 = sub nsw i32 %123, %124
  store i32 %125, i32* %19, align 4
  %126 = load i32*, i32** %14, align 8
  %127 = load i32, i32* %126, align 4
  %128 = load i32, i32* %21, align 4
  %129 = mul nsw i32 %128, 2
  %130 = add nsw i32 %127, %129
  store i32 %130, i32* %20, align 4
  %131 = load i32*, i32** %14, align 8
  %132 = getelementptr inbounds i32, i32* %131, i64 -2
  store i32* %132, i32** %14, align 8
  %133 = load i32, i32* %18, align 4
  %134 = call i8* @av_clip_uint8(i32 %133)
  %135 = ptrtoint i8* %134 to i32
  %136 = load i32*, i32** %14, align 8
  %137 = getelementptr inbounds i32, i32* %136, i32 1
  store i32* %137, i32** %14, align 8
  store i32 %135, i32* %136, align 4
  %138 = load i32, i32* %19, align 4
  %139 = call i8* @av_clip_uint8(i32 %138)
  %140 = ptrtoint i8* %139 to i32
  %141 = load i32*, i32** %14, align 8
  %142 = getelementptr inbounds i32, i32* %141, i32 1
  store i32* %142, i32** %14, align 8
  store i32 %140, i32* %141, align 4
  %143 = load i32, i32* %20, align 4
  %144 = call i8* @av_clip_uint8(i32 %143)
  %145 = ptrtoint i8* %144 to i32
  %146 = load i32*, i32** %14, align 8
  %147 = getelementptr inbounds i32, i32* %146, i32 1
  store i32* %147, i32** %14, align 8
  store i32 %145, i32* %146, align 4
  br label %148

148:                                              ; preds = %111
  %149 = load i32, i32* %15, align 4
  %150 = add nsw i32 %149, 1
  store i32 %150, i32* %15, align 4
  br label %108

151:                                              ; preds = %108
  br label %152

152:                                              ; preds = %151, %96
  br label %156

153:                                              ; preds = %61
  %154 = load i32*, i32** %14, align 8
  %155 = getelementptr inbounds i32, i32* %154, i64 12
  store i32* %155, i32** %14, align 8
  br label %156

156:                                              ; preds = %153, %152
  br label %157

157:                                              ; preds = %156
  %158 = load i32, i32* %12, align 4
  %159 = add nsw i32 %158, 1
  store i32 %159, i32* %12, align 4
  br label %35

160:                                              ; preds = %73, %51, %35
  ret void
}

declare dso_local i32 @AV_RB32(i32*) #1

declare dso_local i8* @av_clip_uint8(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
